# urp-main

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: annotation-guidelines.md  articles.example.yaml
data/: README.md
docs/: implementation-plan.md  research-direction.md
docs/decisions/: README.md
scripts/: run_pipeline.py  smoke_caption.py
src/mm_gate/: __init__.py  caption.py  collect.py  download.py  enrich.py  gate.py  kg.py  pipeline.py  report.py  schemas.py
tests/: test_collect.py
